[package]
name = "enum-tag"
version = "0.2.0"
documentation = "https://docs.rs/enum-tag/"
description = "Proc. macro for generating enum discriminant types."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/robbepop/enum-tag"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["enum", "c-like", "tag", "discriminant", "tagged"]
categories = ["data-structures", "no-std"]

[dependencies]
enum-tag-macro = { version = "0.2.0", path = "macro" }

[workspace]
members = ["macro"]
