[package]
name = "enum-tag-macro"
version = "0.3.0"
documentation = "https://docs.rs/enum-tag-macro/"
description = "Proc. macro implementation for the `enum-tag` crate."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.0"
proc-macro2 = "1.0.0"
quote = "1.0.0"

[dev-dependencies]
enum-tag = { path = ".." }
